Small fix: Fixed search title overflowing when filter is active

--- a/RC-SpeechToText/ClientApp/scss/utils.scss
+++ b/RC-SpeechToText/ClientApp/scss/utils.scss
@@ -16,6 +16,10 @@ html, body {
     margin-top: 10px;
 }
 
+.mg-top-15 {
+    margin-top: 15px;
+}
+
 .mg-top-20 {
     margin-top: 22px;
 }
